# mvrgx

./: .gitignore  README.md  README_pre.md  pyproject.toml  uicomp
src/mvrgx/: __main__.py  cli.py  core.py  file_meta.py  logging.py  project.py  util.py
src/mvrgx/gui/: __main__.py  gui.py  icons_rc.py  ui_dialog_ok.py  ui_dialog_process.py  ui_dialog_rgx_sheet.py  ui_dialog_task.py  ui_dialog_yesno.py  ui_dialog_yesno_with_list.py  ui_dialog_yesnoall.py  ui_main.py
src/mvrgx/gui/asset/: dialog_ok.ui  dialog_process.ui  dialog_rgx_sheet.ui  dialog_task.ui  dialog_yesno.ui  dialog_yesno_with_list.ui  dialog_yesnoall.ui  icons.qrc  main.ui  qstyle.css
src/mvrgx/gui/asset/img/: credits.txt
tools/: readme_parse.py
