[project]
name = "mvrgx"
version = "0.10.0"
description = "Moves/renames files based on an input and output regex pattern."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mvrgx = "mvrgx.cli:run_cli"
mvr = "mvrgx.cli:run_cli"
mvrgui = "mvrgx.gui.gui:run_gui"

[project.optional-dependencies]
gui = [
    "pyside6>=6.9.0",
]
